# libgairq

./: NEWS  README.md  meson.build  meson_options.txt
gairq/: gairq-air-object.c  gairq-air-object.h  gairq-city.c  gairq-city.h  gairq-debug.h  gairq-geo.c  gairq-geo.h  gairq-request-priv.h  gairq-request.c  gairq-request.h  gairq-utils.h  gairq-version.h.in  gairq.h  meson.build
tests/: autoptr-main.c  city-main.c  geo-main.c  meson.build
